--- a/app/src/main/res/layout/repo_item.xml
+++ b/app/src/main/res/layout/repo_item.xml
@@ -10,6 +10,8 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/card_view"
+            android:textSize="40dp"
+            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -23,7 +25,8 @@
 
 
                 <TextView
-
+                    android:textSize="30sp"
+                    android:textStyle="bold"
                     android:id="@+id/name"
                     android:text="namwwwwwwww"
                     android:layout_width="match_parent"
@@ -32,7 +35,7 @@
                     android:paddingRight="@dimen/album_title_padding"
                     android:paddingTop="@dimen/album_title_padding"
                     android:textColor="@color/album_title"
-                    android:textSize="@dimen/album_title" />
+                     />
 
                 <TextView
                     android:id="@+id/des"
@@ -46,6 +49,8 @@
                     android:textSize="@dimen/songs_count" />
 
                 <TextView
+                    android:textSize="25sp"
+                    android:textStyle="bold"
                     android:text="owner name"
                     android:id="@+id/username"
                     android:layout_width="match_parent"
@@ -54,7 +59,7 @@
                     android:paddingBottom="@dimen/songs_count_padding_bottom"
                     android:paddingLeft="@dimen/album_title_padding"
                     android:paddingRight="@dimen/album_title_padding"
-                    android:textSize="@dimen/songs_count" />
+                   />
 
             </RelativeLayout>
 
