--- a/app/src/main/res/layout/repo_item_green.xml
+++ b/app/src/main/res/layout/repo_item_green.xml
@@ -22,18 +22,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-
                 <TextView
-
+                    android:textSize="30sp"
+                    android:textStyle="bold"
                     android:id="@+id/name"
                     android:text="namwwwwwwww"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                     android:paddingLeft="@dimen/album_title_padding"
+                    android:paddingLeft="@dimen/album_title_padding"
                     android:paddingRight="@dimen/album_title_padding"
                     android:paddingTop="@dimen/album_title_padding"
                     android:textColor="@color/album_title"
-                    android:textSize="@dimen/album_title" />
+                    />
 
                 <TextView
                     android:id="@+id/des"
@@ -47,6 +47,8 @@
                     android:textSize="@dimen/songs_count" />
 
                 <TextView
+                    android:textSize="25sp"
+                    android:textStyle="bold"
                     android:text="owner name"
                     android:id="@+id/username"
                     android:layout_width="match_parent"
@@ -55,8 +57,7 @@
                     android:paddingBottom="@dimen/songs_count_padding_bottom"
                     android:paddingLeft="@dimen/album_title_padding"
                     android:paddingRight="@dimen/album_title_padding"
-                    android:textSize="@dimen/songs_count" />
-
+                    />
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
